# ollama-

./: .dockerignore  .env.example  .gitignore  Dockerfile  Ollama-VPS-Setup-Guide.html  README.md  docker-compose.yml
.github/workflows/: deploy-vps.yml
docker/: supervisord.conf
docker/searxng/: settings.yml
front end/: .env.local.example  README.md  package-lock.json  package.json  tsconfig.json
front end/app/: globals.css  layout.tsx  page.tsx
front end/app/analytics/: page.tsx
front end/app/api-keys/: page.tsx
front end/app/chat/: page.tsx
ollama-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ollama-backend/app/: __init__.py  main.py
ollama-backend/app/api/: deps.py
ollama-backend/app/api/routes/: account.py  admin.py  auth.py  chat.py  conversations.py  health.py  knowledge.py  memory.py  skills.py  tools.py  usage.py
ollama-backend/app/core/: config.py  logging.py  security.py
ollama-backend/app/db/: models.py  session.py
ollama-backend/app/schemas/: account.py  admin.py  auth.py  chat.py  memory.py  rag.py  skills.py  tools.py  usage.py
ollama-backend/app/services/: domain_lookup.py  generation_slots.py  language.py  model_access.py  ollama.py  quota.py  rag.py  rate_limit.py  web_search.py
ollama-backend/infra/: nginx.conf
ollama-backend/ollama_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ollama-backend/scripts/: wait_for_services.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+12 files in other folders)
