[project]
name = "ollama-gateway"
version = "0.1.0"
description = "Secure production-oriented Ollama gateway"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "redis[hiredis]>=5,<7",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.4,<3",
  "PyJWT>=2.9,<3",
  "pwdlib[argon2]>=0.2,<1",
  "email-validator>=2.2,<3",
  "structlog>=24.4,<26",
  "pgvector>=0.3,<1",
  "pypdf>=5,<7",
  "python-multipart>=0.0.9,<1",
  "dnspython>=2.7,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.6,<1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
